# GEOSX

host-configs/: environment.cmake
scripts/: travis_build_and_test.sh
src/: CMakeLists.txt
src/cmake/: GeosxMacros.cmake
src/coreComponents/: CMakeLists.txt
src/coreComponents/codingUtilities/: CMakeLists.txt
src/coreComponents/codingUtilities/tests/: CMakeLists.txt
src/coreComponents/common/: CMakeLists.txt  DataLayouts.hpp  DataTypes.hpp  Path.cpp
src/coreComponents/common/unitTests/: CMakeLists.txt
src/coreComponents/constitutive/: CMakeLists.txt
src/coreComponents/constitutive/capillaryPressure/: BrooksCoreyCapillaryPressure.hpp  CapillaryPressureBase.hpp  VanGenuchtenCapillaryPressure.hpp
src/coreComponents/constitutive/fluid/: DeadOilFluid.hpp  MultiFluidBase.cpp  MultiFluidBase.hpp  MultiFluidPVTPackageWrapper.hpp  MultiPhaseMultiComponentFluid.hpp  layouts.hpp
src/coreComponents/constitutive/relativePermeability/: BrooksCoreyBakerRelativePermeability.hpp  BrooksCoreyRelativePermeability.hpp  RelativePermeabilityBase.hpp  RelativePermeabilityInterpolators.hpp  TableRelativePermeability.hpp  VanGenuchtenBakerRelativePermeability.hpp
src/coreComponents/constitutive/unitTests/: CMakeLists.txt
src/coreComponents/dataRepository/: CMakeLists.txt  WrapperBase.cpp
src/coreComponents/dataRepository/unitTests/: CMakeLists.txt
src/coreComponents/fileIO/: CMakeLists.txt
src/coreComponents/finiteElement/: CMakeLists.txt
src/coreComponents/finiteElement/kernelInterface/: KernelBase.hpp  SparsityKernelBase.hpp  kernelJIT.cpp
src/coreComponents/finiteElement/unitTests/: CMakeLists.txt
src/coreComponents/finiteVolume/: CMakeLists.txt
src/coreComponents/finiteVolume/unitTests/: CMakeLists.txt
src/coreComponents/linearAlgebra/: CMakeLists.txt
src/coreComponents/linearAlgebra/interfaces/: MatrixBase.hpp
src/coreComponents/linearAlgebra/interfaces/hypre/: HypreMatrix.cpp  HypreMatrix.hpp  HyprePreconditioner.cpp  HypreUtils.hpp
src/coreComponents/linearAlgebra/interfaces/petsc/: PetscMatrix.cpp  PetscMatrix.hpp
src/coreComponents/linearAlgebra/interfaces/trilinos/: EpetraMatrix.cpp  EpetraMatrix.hpp
src/coreComponents/linearAlgebra/multiscale/: MetisPartitioner.cpp  MetisPartitioner.hpp  MsRSBStrategy.cpp  MsRSBStrategy.hpp  MultiscaleMeshData.hpp  MultiscaleMeshLevel.cpp  MultiscaleMeshLevel.hpp  MultiscaleMeshObjectManager.cpp  MultiscaleMeshObjectManager.hpp  MultiscaleMeshUtils.cpp  MultiscaleMeshUtils.hpp  MultiscaleStrategy.cpp  MultiscaleStrategy.hpp  PartitionerBase.cpp  PartitionerBase.hpp  PreconditionerMultiscale.cpp  PreconditionerMultiscale.hpp
src/coreComponents/linearAlgebra/unitTests/: CMakeLists.txt
src/coreComponents/linearAlgebra/utilities/: LAIHelperFunctions.hpp  LinearSolverParameters.hpp
src/coreComponents/managers/: CMakeLists.txt  DomainPartition.cpp
src/coreComponents/managers/unitTests/: CMakeLists.txt
src/coreComponents/mesh/: CMakeLists.txt
src/coreComponents/mesh/mpiCommunications/: CommunicationTools.cpp
src/coreComponents/meshUtilities/: CMakeLists.txt
src/coreComponents/meshUtilities/unitTests/: CMakeLists.txt
src/coreComponents/mpiCommunications/: CMakeLists.txt
src/coreComponents/mpiCommunications/unitTests/: CMakeLists.txt
src/coreComponents/physicsSolvers/: CMakeLists.txt  LinearSolverParameters.cpp  LinearSolverParameters.hpp  SolverBase.cpp
src/coreComponents/physicsSolvers/fluidFlow/: CompositionalMultiphaseBase.cpp  CompositionalMultiphaseBase.hpp  CompositionalMultiphaseBaseKernels.cpp  CompositionalMultiphaseBaseKernels.hpp  CompositionalMultiphaseFVM.cpp  CompositionalMultiphaseFVM.hpp  CompositionalMultiphaseFVMKernels.cpp  CompositionalMultiphaseFVMKernels.hpp  CompositionalMultiphaseHybridFVM.cpp  CompositionalMultiphaseHybridFVMKernels.cpp  CompositionalMultiphaseHybridFVMKernels.hpp  SinglePhaseHybridFVM.cpp
src/coreComponents/physicsSolvers/fluidFlow/unitTests/: CMakeLists.txt
src/coreComponents/physicsSolvers/fluidFlow/wells/: CompositionalMultiphaseWell.cpp  CompositionalMultiphaseWell.hpp  CompositionalMultiphaseWellKernels.hpp
src/coreComponents/physicsSolvers/fluidFlow/wells/unitTests/: CMakeLists.txt
src/coreComponents/physicsSolvers/multiphysics/: CompositionalMultiphaseReservoir.cpp  MultiphasePoroelasticKernel.hpp  SinglePhaseReservoir.cpp
src/coreComponents/physicsSolvers/simplePDE/: LaplaceFEM.cpp  PhaseFieldDamageFEM.cpp
src/coreComponents/physicsSolvers/solidMechanics/: SolidMechanicsEmbeddedFractures.cpp  SolidMechanicsLagrangianFEM.cpp  SolidMechanicsLagrangianFEM.hpp
src/coreComponents/physicsSolvers/solidMechanics/integratedTests/: multiscale_mechanics.xml
src/coreComponents/schema/: schema.xsd
src/coreComponents/schema/docs/: LinearSolverParameters.rst
src/coreComponents/unitTests/constitutiveTests/: constitutiveTestHelpers.hpp  testMultiFluid.cpp
src/coreComponents/unitTests/fluidFlowTests/: testCompMultiphaseFlow.cpp  testCompMultiphaseFlowHybrid.cpp
src/coreComponents/unitTests/wellsTests/: testReservoirCompositionalMultiphaseMSWells.cpp
src/coreComponents/unitTests/xmlTests/: CMakeLists.txt
src/coreComponents/virtualElement/: CMakeLists.txt
src/coreComponents/virtualElement/unitTests/: CMakeLists.txt
